<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/czas_na_zastopowanie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettingsText"
            app:layout_constraintVertical_bias="0.15">

            <Button
                android:id="@+id/add_10_minutes"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/add_10" />

            <Button
                android:id="@+id/add_1_minute"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/add_1"/>

            <Button
                android:id="@+id/add_10_seconds"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/add_10"/>

            <Button
                android:id="@+id/add_1_second"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:text="@string/add_1" />

            <TextView
                android:id="@+id/minute_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/default_clock_value"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/minute_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/default_clock_value"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/separator"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/second_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/default_clock_value"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/second_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/default_clock_value"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sub_10_minutes"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/minus_10" />

            <Button
                android:id="@+id/sub_1_minute"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/minus_1" />

            <Button
                android:id="@+id/sub_10_seconds"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/minus_10"/>

            <Button
                android:id="@+id/sub_1_second"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:text="@string/minus_1"/>
        </GridLayout>
        <TextView
            android:id="@+id/tvCheckLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cbStopOnLocChng"
            app:layout_constraintBottom_toBottomOf="@id/cbStopOnLocChng"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/przerwij_podczas_zmiany_lokalizacji"/>
        <CheckBox
            android:id="@+id/cbStopOnLocChng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvCheckLoc"
            app:layout_constraintTop_toBottomOf="@id/gridLayout"/>
        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/cbStopOnLocChng"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSavedContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/rlSetting"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>